<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:key="@string/sync_survey"
        android:title="@string/sync_survey"/>

    <ListPreference
        android:title="@string/language"
        android:summary="@string/lang_change_description"
        android:key="@string/language_type"
        android:defaultValue="en"
        android:icon="@drawable/ic_lang"
        android:entries="@array/language_option"
        android:entryValues="@array/languages_value" />

    <ListPreference
        android:title="@string/dark_mode"
        android:key="@string/mode_key"
        android:defaultValue="light"
        android:icon="@drawable/ic_dark_mode"
        android:entries="@array/dark_mode_entries"
        android:entryValues="@array/dark_mode_values" />
    <Preference
        android:key="@string/passcode"
        android:persistent="false"
        android:icon="@drawable/ic_passcode"
        android:summary="@string/change_app_passcode"
        android:title="@string/change_passcode"/>

    <EditTextPreference
        android:key="@string/hint_instance_url"
        android:title="@string/instance_url"/>

</PreferenceScreen>