<!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mifos.mifosxdroid.online.ClientActivity">

    <item
        android:id="@+id/more_info"
        android:enabled="true"
        android:title="@string/more_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/pinpoint"
        android:enabled="true"
        android:title="@string/pinpoint"
        app:showAsAction="never" />

    <item
        android:id="@+id/charges"
        android:enabled="true"
        android:title="@string/charges"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_savings"
        android:enabled="true"
        android:title="@string/savings_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_loan"
        android:enabled="true"
        android:title="@string/add_loan"
        app:showAsAction="never" />
    <item
        android:id="@+id/documents"
        android:enabled="true"
        android:title="@string/documents"
        app:showAsAction="never" />

    <item
        android:id="@+id/identifiers"
        android:enabled="true"
        android:title="@string/identifiers"
        app:showAsAction="never" />


</menu>
