<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mifos.mifosxdroid.online.ClientSearchActivity" >

    <item
        android:id="@+id/mItem_list"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/list_all_clients" />

    <item android:id="@+id/item_centers"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/center_list"/>

    <item android:id="@+id/item_collection_sheet"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/collection_sheet"/>

    <item android:id="@+id/logout"
        android:enabled="true"
        app:showAsAction="never"
        android:title="@string/logout" />
</menu>
