<!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/mItem_create_new_client"
        android:enabled="true"
        android:title="@string/create_client"
        app:showAsAction="never" />
    <item
        android:id="@+id/mItem_create_new_center"
        android:enabled="true"
        android:title="@string/create_center"
        app:showAsAction="never" />
    <item
        android:id="@+id/mItem_create_new_group"
        android:enabled="true"
        android:title="@string/create_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
