<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/tv_sync_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/sync_clients_full_information"
        />

    <TextView
        android:id="@+id/tv_client_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="10dp"
        android:text="@string/name"
        />

    <TextView
        android:id="@+id/tv_total_clients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="10dp"
        android:text="@string/total"
        />

    <TextView
        android:id="@+id/tv_syncing_client"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="10dp"
        android:text="@string/syncing_client"
        />

    <ProgressBar
        android:id="@+id/pb_sync_client"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="20"
        android:layout_margin="5dip"/>

    <TextView
        android:id="@+id/tv_total_progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="10dp"
        android:text="@string/total_sync_progress"
        />

    <ProgressBar
        android:id="@+id/pb_total_sync_client"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="100"
        android:progress="20"
        android:layout_margin="5dip"/>

    <TextView
        android:id="@+id/tv_sync_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="10dp"
        android:text="@string/failed_sync"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/btn_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/hide"
            />
    </LinearLayout>

</LinearLayout>