<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ This project is licensed under the open source MPL V2.
  ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout.Base">

    <include layout="@layout/toolbar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/LinearLayout.Base"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/staffWrapper"
            style="@style/TextInput.Offline">

            <EditText
                android:id="@+id/et_staff_id"
                style="@style/EditText.BaseWidth"
                android:hint="@string/staff_id"
                android:nextFocusDown="@+id/et_password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/branchWrapper"
            style="@style/TextInput.Offline">

            <EditText
                android:id="@+id/et_branch_id"
                style="@style/EditText.BaseWidth"
                android:hint="@string/branch_id"
                android:nextFocusDown="@+id/et_password" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/tv_select_date"
            style="@style/TextView.BaseWidth"
            android:layout_margin="5dp"
            android:hint="@string/tap_to_select_date" />

        <Button
            android:id="@+id/btnSave"
            style="@style/Button.Base"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>

